@startuml
skinparam monochrome true
skinparam classAttributeIconSize 0
skinparam nodesep 110
skinparam ranksep 10

package Model {
	class Party {
		- id: int
		- name: String
		- date: Date
		- numberOfAttendees: int
		- balance: float
		- normalBeerPrice: float
		- specialBeerPrice: float
		+ Party(id, name, date, numberOfAttendees, balance)
		+ Party(id, name, date, normalBeerPrice, specialBeerPrice, servedBeers)
	}

	class Product {
		- id: int
		- name: String
		- price: float
		+ Product(id, name, price, type)
	}

	enum ProductType {
		BEER,
		DEPOSIT,
		FOOD
	}

	ProductType "- type" <- Product

	enum BeerCategory {
		NORMAL,
		SPECIAL
	}

	Product "- servedBeers: Map<Product, BeerCategory>" <--o Party

	BeerCategory <. Party: Uses
	
	class Member {
		- id: int
		- firstName: String
		- lastName: String
		- balance: float
		- lastMembershipPayment: Date
		- formerStaff: boolean
		- email: String
		- phone: String
		+ Member(id, firstName, lastName, balance, lastMembershipPayment, formerStaff)
		
		+ isMembershipValid(): Boolean
	}

	enum School {
		CPP,
		ENSE3,
		ENSIMAG,
		ESISAR,
		GI,
		PAPET,
		PHELMA
		+ {static} getSchool(name: String): School
	}

	Member -> "- school" School

	class Transaction {
		- id: int
		- label: String
		- timestamp: Date
		- amount: float
		Transaction(id, label, timestamp, amount, party, member)
	}

	Party "- party 0..1" <- Transaction
	Member "- member" <-- Transaction
}

package Controller {
	interface RESTDataManager {
		+ getObject(ressource: String): Map<String, Object>
		+ getArray(ressource: String): List<Object>
		+ post(resource: String, jsonObject: Map<String, Object>)
		+ put(resource: String, jsonObject: Map<String, Object)
		+ delete(resource: String): Map<String, Object>
	}

	class RESTfulDataManager {
		- host: String
		- port: String
		- authToken: String
		+ RESTfulDataManager(host, port, authToken)
	}

	RESTDataManager <|.. RESTfulDataManager
		

	class PartyController {
		+ PartyController(dataManager: RESTDataManager)
		+ getAllParties(): List<Party>
		+ addParty(party: Party): int
		+ editParty(party: Party)
		+ getParty(id: int): Party
		+ deleteParty(id: int)
		+ getDefaultNormalBeerPrice(): float
		+ setDefaultNormalBeerPrice(newPrice: float)
		+ getDefaultSpecialBeerPrice(): float
		+ setDefaultSpecialBeerPrice(newPrice: float)
	}

	RESTDataManager "- dataManager" <- PartyController

	class ProductController {
		+ ProductController(dataManager: RESTDataManager)
		+ getAllProducts(): List<Product>
		+ getProductsByType(type: string): List<Product>
		+ deleteProduct(id: int)
		+ addProduct(product: Product): int
		+ editProduct(product: Product)
	}

	RESTDataManager "- dataManager" <-- ProductController

	class MemberController {
		+ MemberController(dataManager: RESTDataManager)
		+ getAllMembers(): List<Member>
		+ getBalanceTooLowThreshold(): float
		+ setBalanceTooLowThreshold(newThreshold: float)
		+ getMember(id: int): Member
		+ deleteMember(id: int)
		+ addMember(member: Member): int
		+ renewMembership(id: int)
	}
	
	MemberController -> "- dataManager" RESTDataManager

	Class TransactionController {
		+ TransactionController(dataManager: RESTDataManager)
		+ getTransactionsForParty(party: Party): List<Transaction>
		+ deleteTransaction(id: int)
		+ addTransaction(transaction: Transaction): int
		+ getBalanceThreshold(): float
		+ updateBalanceThresold(newThreshold: float)
	}
	
	RESTDataManager "- dataManager" <-- TransactionController

}

PartyController ..> Party: Uses
ProductController ..> Product: Uses
MemberController ..> Member: Uses
TransactionController ..> Transaction: Uses

@enduml
